--- a/blog-config.yml
+++ b/blog-config.yml
@@ -1,27 +1,26 @@
 spring:
   profiles:
     active:
-      - dev
+    - dev
 ---
-  server:
-    prot: 8201
-  spring:
-    profiles: dev
-    application:
-      name:blog-confg-client
-  eureka:
-    client:
-      service-url:
-        defaultZone: http://eureka7001.com:7001/eureka/
+server:
+  port: 8201
+spring:
+  profiles: dev
+  application:
+    name: microservicecloud-config-client
+eureka:
+  client:
+    service-url:
+      defaultZone: http://eureka-dev.com:7001/eureka/
 ---
-  server:
-    prot: 8202
-  spring:
-    profiles: test
-    application:
-      name: blog-config-client
-  eureka:
-    client:
-      service-url:
-        defaultZone: http://eureka7001.com:7001/eureka/
-
+server:
+  port: 8202
+spring:
+  profiles: test
+  application:
+    name: microservicecloud-config-client
+eureka:
+  client:
+    service-url:
+      defaultZone: http://eureka-test.com:7001/eureka/
