--- a/blog-config-eureka-service.yml
+++ b/blog-config-eureka-service.yml
@@ -4,7 +4,7 @@
 #      - dev
 #---
 #server:
-#  prot: 7001 #注册中心占用7001端口，冒号后面必须要要有空格
+#  port: 7001 #注册中心占用7001端口，冒号后面必须要要有空格
 #spring:
 #  profiles: dev
 #  aplication:
