--- a/blog-config-dept-client.yml
+++ b/blog-config-dept-client.yml
@@ -11,7 +11,7 @@ spring:
     name: blog-config-dept-client
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://47.102.197.42:3306/clo
+    url: jdbc:mysql://47.102.197.42:3306/cloud1
     username: root
     password: 123456
 mybatis:
