--- a/springcloud-proj/blog-customer1/src/main/resources/application.yml
+++ b/springcloud-proj/blog-customer1/src/main/resources/application.yml
@@ -1,2 +1,7 @@
 server:
   port: 9002
+eureka:
+  client:
+    register-with-eureka: false
+    service-url:
+      defaultZone: http://localhost:9003/eureka/,http://localhost:9004/eureka/,http://localhost:9005/eureka/
