--- a/springcloud-proj/blog-provider1/pom.xml
+++ b/springcloud-proj/blog-provider1/pom.xml
@@ -66,6 +66,12 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-netflix-eureka-server</artifactId>
+            <exclusions>
+                <exclusion>
+                    <artifactId>jackson-dataformat-xml</artifactId>
+                    <groupId>com.fasterxml.jackson.dataformat</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
