--- a/springcloud-proj/blog-api/pom.xml
+++ b/springcloud-proj/blog-api/pom.xml
@@ -33,6 +33,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
