--- a/springcloud-proj/blog-eureka1/src/main/resources/application.yml
+++ b/springcloud-proj/blog-eureka1/src/main/resources/application.yml
@@ -7,5 +7,5 @@ eureka:
     fetch-registry: false
     register-with-eureka: false
     service-url:
-      defaultZone: http://localhost:9004/eureka/,http://localhost:9005/eureka/
+      defaultZone: http://localhost:9004/eureka/,http://localhost:9005/eureka/,http://localhost:9013/eureka/
 #      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
