--- a/springcloud-proj/blog-eureka2/src/main/resources/application.yml
+++ b/springcloud-proj/blog-eureka2/src/main/resources/application.yml
@@ -7,4 +7,4 @@ eureka:
     register-with-eureka: false
     fetch-registry: false
     service-url:
-      defaultZone: http://localhost:9003/eureka/,http://localhost:9005/eureka/
+      defaultZone: http://localhost:9003/eureka/,http://localhost:9005/eureka/,http://localhost:9005/eureka/
