--- a/springcloud-proj/blog-provider3/src/main/resources/application.yml
+++ b/springcloud-proj/blog-provider3/src/main/resources/application.yml
@@ -28,4 +28,10 @@ info:
   build:
     artifactId: ${project.artifactId}
     version: ${project.version}
-
+#在被监控的服务上添加暴露所有端点
+management:
+  endpoints:
+    web:
+      exposure:
+        include: hystrix.stream
+#        include: '*' #'*'代表开放所有端点
