--- a/config-info-test.yml
+++ b/config-info-test.yml
@@ -1,2 +1,2 @@
 spring:
-  cloud: I am the git configurarion file from test environment. I will edit it.
+  cloud: I am the git configurarion file from test environment. I will edit it. update
